# incubator-nuttx

./: CMakeLists.txt  Kconfig
arch/: CMakeLists.txt  Kconfig
arch/arm/: CMakeLists.txt
arch/sim/: CMakeLists.txt
arch/sim/src/sim/: CMakeLists.txt
audio/: CMakeLists.txt
binfmt/: CMakeLists.txt
binfmt/libelf/: CMakeLists.txt
binfmt/libnxflat/: CMakeLists.txt
boards/: CMakeLists.txt  Kconfig
cmake/: Toolchain-tools.cmake  custom_commands.cmake  detect_platform.cmake  kconfig.cmake  kconfig_directory.cmake  kconfig_lib.cmake  menuconfig.cmake  nuttx_add_application.cmake  nuttx_add_library.cmake  nuttx_add_module.cmake  nuttx_add_romfs.cmake  nuttx_add_symtab.cmake  nuttx_generate_outputs.cmake  nuttx_parse_function_args.cmake  symtab.c.in  version.cmake
crypto/: CMakeLists.txt
drivers/: CMakeLists.txt  Kconfig
drivers/1wire/: CMakeLists.txt
drivers/analog/: CMakeLists.txt
drivers/audio/: CMakeLists.txt
drivers/bch/: CMakeLists.txt
drivers/can/: CMakeLists.txt
drivers/clk/: CMakeLists.txt
drivers/contactless/: CMakeLists.txt
drivers/crypto/: CMakeLists.txt
drivers/eeprom/: CMakeLists.txt
drivers/efuse/: CMakeLists.txt
drivers/i2c/: CMakeLists.txt
drivers/i2s/: CMakeLists.txt
drivers/input/: CMakeLists.txt
drivers/ioexpander/: CMakeLists.txt
drivers/lcd/: CMakeLists.txt
drivers/leds/: CMakeLists.txt
drivers/loop/: CMakeLists.txt
drivers/math/: CMakeLists.txt
drivers/misc/: CMakeLists.txt
drivers/mmcsd/: CMakeLists.txt
drivers/modem/: CMakeLists.txt
drivers/motor/: CMakeLists.txt
drivers/motor/foc/: CMakeLists.txt
drivers/mtd/: CMakeLists.txt
drivers/net/: CMakeLists.txt
drivers/note/: CMakeLists.txt
drivers/pipes/: CMakeLists.txt  pipe_common.h
drivers/power/: CMakeLists.txt
drivers/rc/: CMakeLists.txt
drivers/rf/: CMakeLists.txt
drivers/rptun/: CMakeLists.txt
drivers/sensors/: CMakeLists.txt
drivers/serial/: CMakeLists.txt
drivers/spi/: CMakeLists.txt
drivers/syslog/: CMakeLists.txt
drivers/timers/: CMakeLists.txt
drivers/usbdev/: CMakeLists.txt
drivers/usbhost/: CMakeLists.txt
drivers/usbmisc/: CMakeLists.txt
drivers/usbmonitor/: CMakeLists.txt
drivers/video/: CMakeLists.txt
drivers/wireless/: CMakeLists.txt
drivers/wireless/bluetooth/: CMakeLists.txt
drivers/wireless/ieee80211/: CMakeLists.txt
drivers/wireless/ieee80211/bcm43xxx/: CMakeLists.txt
drivers/wireless/ieee802154/: CMakeLists.txt
drivers/wireless/ieee802154/at86rf23x/: CMakeLists.txt
drivers/wireless/ieee802154/mrf24j40/: CMakeLists.txt
drivers/wireless/ieee802154/xbee/: CMakeLists.txt
drivers/wireless/lpwan/: CMakeLists.txt
drivers/wireless/lpwan/sx127x/: CMakeLists.txt
drivers/wireless/spirit/: CMakeLists.txt
drivers/wireless/spirit/drivers/: CMakeLists.txt
drivers/wireless/spirit/lib/: CMakeLists.txt
fs/: CMakeLists.txt
fs/aio/: CMakeLists.txt
fs/binfs/: CMakeLists.txt
fs/cromfs/: CMakeLists.txt
fs/dirent/: CMakeLists.txt
fs/driver/: CMakeLists.txt
fs/fat/: CMakeLists.txt
fs/hostfs/: CMakeLists.txt
fs/inode/: CMakeLists.txt  inode.h
fs/littlefs/: CMakeLists.txt
fs/mmap/: CMakeLists.txt
fs/mount/: CMakeLists.txt
fs/mqueue/: CMakeLists.txt
fs/nfs/: CMakeLists.txt
fs/nxffs/: CMakeLists.txt
fs/partition/: CMakeLists.txt  partition.h
fs/procfs/: CMakeLists.txt
fs/romfs/: CMakeLists.txt
fs/rpmsgfs/: CMakeLists.txt
fs/semaphore/: CMakeLists.txt
fs/shm/: CMakeLists.txt
fs/smartfs/: CMakeLists.txt
fs/socket/: CMakeLists.txt
fs/spiffs/: CMakeLists.txt
fs/spiffs/src/: CMakeLists.txt
fs/tmpfs/: CMakeLists.txt
fs/unionfs/: CMakeLists.txt
fs/userfs/: CMakeLists.txt
fs/vfs/: CMakeLists.txt
graphics/: CMakeLists.txt
graphics/nxbe/: CMakeLists.txt
graphics/nxglib/: CMakeLists.txt
graphics/nxmu/: CMakeLists.txt
graphics/nxterm/: CMakeLists.txt
include/: semaphore.h
include/nuttx/: compiler.h  sched_note.h  spinlock.h
libs/: CMakeLists.txt
libs/libc/: CMakeLists.txt
libs/libdsp/: CMakeLists.txt
libs/libnx/: CMakeLists.txt
libs/libxx/: CMakeLists.txt
mm/: CMakeLists.txt
mm/circbuf/: CMakeLists.txt
mm/iob/: CMakeLists.txt
mm/kasan/: CMakeLists.txt
mm/kmm_heap/: CMakeLists.txt
mm/mm_gran/: CMakeLists.txt
mm/mm_heap/: CMakeLists.txt  mm.h
mm/shm/: CMakeLists.txt
mm/umm_heap/: CMakeLists.txt
net/: CMakeLists.txt
net/arp/: CMakeLists.txt
net/bluetooth/: CMakeLists.txt
net/can/: CMakeLists.txt
net/devif/: CMakeLists.txt
net/icmp/: CMakeLists.txt
net/icmpv6/: CMakeLists.txt
net/ieee802154/: CMakeLists.txt
net/igmp/: CMakeLists.txt
net/inet/: CMakeLists.txt
net/ipforward/: CMakeLists.txt
net/local/: CMakeLists.txt
net/mld/: CMakeLists.txt
net/neighbor/: CMakeLists.txt
net/netdev/: CMakeLists.txt
net/netlink/: CMakeLists.txt
net/pkt/: CMakeLists.txt
net/procfs/: CMakeLists.txt
net/route/: CMakeLists.txt
net/rpmsg/: CMakeLists.txt
net/sixlowpan/: CMakeLists.txt
net/socket/: CMakeLists.txt
net/tcp/: CMakeLists.txt
net/udp/: CMakeLists.txt
net/usrsock/: CMakeLists.txt
net/utils/: CMakeLists.txt
openamp/: CMakeLists.txt  libmetal.cmake  open-amp.cmake
sched/: CMakeLists.txt
sched/clock/: CMakeLists.txt
sched/environ/: CMakeLists.txt
sched/group/: CMakeLists.txt  Make.defs
sched/init/: CMakeLists.txt
sched/irq/: CMakeLists.txt
sched/module/: CMakeLists.txt
sched/mqueue/: CMakeLists.txt
sched/paging/: CMakeLists.txt
sched/pthread/: CMakeLists.txt
sched/sched/: CMakeLists.txt  sched.h
sched/semaphore/: CMakeLists.txt
sched/signal/: CMakeLists.txt  signal.h
sched/task/: CMakeLists.txt
sched/timer/: CMakeLists.txt
sched/tls/: CMakeLists.txt
sched/wdog/: CMakeLists.txt
sched/wqueue/: CMakeLists.txt
syscall/: CMakeLists.txt
syscall/proxies/: CMakeLists.txt
syscall/stubs/: CMakeLists.txt
syscall/wraps/: CMakeLists.txt
tools/: CMakeLists.txt  Unix.mk  Win.mk
video/: CMakeLists.txt
video/videomode/: CMakeLists.txt
wireless/: CMakeLists.txt
wireless/bluetooth/: CMakeLists.txt
wireless/ieee802154/: CMakeLists.txt
(+104 files in other folders)
